# kashtable

./: README.md  app.py  pyproject.toml
instance/: db.sqlite
kashtable/: __init__.py  config.py  models.py  views.py
kashtable/errors/: forms.py  handlers.py
kashtable/files/archive/: sample-kt-1.xlsx
kashtable/files/derived/: sample-kt-2.xlsx
kashtable/main/: forms.py  routes.py
kashtable/posts/: forms.py  routes.py  utils.py
kashtable/static/assets/css/: style.bundle.css
kashtable/static/assets/css/pages/: my-script.css
kashtable/static/assets/js/: scripts.bundle.js
kashtable/static/assets/js/pages/: my-script.js  widgets.js
kashtable/static/assets/plugins/global/: plugins.bundle.css
kashtable/templates/: graph.html  home.html  login.html  profile.html  register.html  reset_request.html  reset_token.html  settings.html  table.html  user_upload.html
kashtable/templates/admin/: details.html  index.html  my_clients.html  my_files.html
kashtable/templates/errors/: 403.html  404.html  500.html
kashtable/templates/layouts/: saas.html
kashtable/templates/macros/: aside.html  breadcrumbs.html  footer.html  highcharts_css.html  pagination.html
kashtable/templates/partials/: _aside.html  _content.html  _footer.html  _header-mobile.html  _header.html
kashtable/templates/partials/_extras/: chat.html  toolbar.html
kashtable/templates/partials/_extras/dropdown/: languages.html  notifications.html  quick-actions.html  search-dropdown.html
kashtable/templates/partials/_subheader/: general.html
kashtable/users/: forms.py  routes.py  utils.py
(+35 files in other folders)
